--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">etechapp</string>
+    <string name="required">Veuillez saisir les champs obligatoires</string>
+    <string name="required_mail">e-mail nécessaire</string>
+    <string name="required_password">Mot de passe nécessaire</string>
 </resources>
