--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,17 @@
     <string name="required">Veuillez saisir les champs obligatoires</string>
     <string name="required_mail">e-mail nécessaire</string>
     <string name="required_password">Mot de passe nécessaire</string>
+
+    <string name="required_prenom">Prénom nécessaire</string>
+    <string name="required_nom">nom nécessaire</string>
+
+    <string name="choisir_prendre_une_photo">Choisir / Prendre une photo</string>
+    <string name="hint_votre_identifiant">Votre identifiant</string>
+    <string name="hint_nom">Nom</string>
+    <string name="hint_prenom">Prénom</string>
+    <string name="hint_password">Mot de passe</string>
+    <string name="label_btn_valider_inscription">Valider inscription</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
