--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,12 @@
     <string name="label_btn_valider_inscription">Valider inscription</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="detail_employe_label">Détail de l\'employé</string>
+    <string name="detail_matricule">Matricule: %1$d</string>
+    <string name="detail_mail">e-mail: %1$s</string>
+    <string name="detail_allias">( %1$s )</string>
+    <string name="detail_age">%1$d ans</string>
+    <!--le second parametre sert a differencier hiomme et femme-->
+    <string name="detail_embauche">embauché%2$s le %1$s</string>
+    <string name="detail_birth_date">né%2$s le %1$s</string>
 </resources>
