--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,8 +45,11 @@
     <string name="rbutton_homme">Homme</string>
     <string name="rbutton_femme">Femme</string>
     <string name="btn_text_create_employe">Creer employe</string>
+    <string name="btn_text_update_employe">Update employe</string>
     <string name="txt_aucun_poste">Aucun poste n\'a été affecté a cet employé</string>
     <string name="ajouter_un_poste">Ajouter un poste</string>
     <string name="choisir_poste">Choisir un poste</string>
     <string name="hint_add_poste_date_promotion">Date de promotion</string>
+    <string name="supprimer">Supprimer</string>
+    <string name="modifier">Modifier</string>
 </resources>
