online and offline operation done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,6 @@
     <string name="hint_add_poste_date_promotion">Date de promotion</string>
     <string name="supprimer">Supprimer</string>
     <string name="modifier">Modifier</string>
+    <string name="annuler_operation">Annuler l\'opération</string>
+
 </resources>
