all photos are okey --- nex pull technics and its done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,8 +44,8 @@
     <string name="hint_e_mail">e-mail</string>
     <string name="rbutton_homme">Homme</string>
     <string name="rbutton_femme">Femme</string>
-    <string name="btn_text_create_employe">Creer employe</string>
-    <string name="btn_text_update_employe">Update employe</string>
+    <string name="btn_text_create_employe">Créer l\'employé</string>
+    <string name="btn_text_update_employe">Modifier l\'employé</string>
     <string name="txt_aucun_poste">Aucun poste n\'a été affecté a cet employé</string>
     <string name="ajouter_un_poste">Ajouter un poste</string>
     <string name="choisir_poste">Choisir un poste</string>
