--- a/todo.txt
+++ b/todo.txt
@@ -1,26 +1,15 @@
 - ordonner les items de la liste
-- ameliorer le rendu des operation Dto
-- terminer l'ajout apres succes
-- mettre en place un system de pull
-- commencer la modification
 - ajout page de setting
 
 1- regler l'affichage de la modification
 2- regler le pbm de la base 64
 3- s'attaquer a la modificatiuon des modifications (ne pas oublier le pbm de changement de poste ...)
 
-3- modification success call back
-3- test des updates
 5- bouclage du projet et test de begining + pull to refresh
 6- penser a la resolution des conflits et amelioration de l'interface graphique
 
-1- Regler affichage des operation
-2- regler context menu (ajouter bouton revert)
-
-Les types de recherche:
-    recherche par nom|prenom|allias / matricule
-    recherche par pole
+// travail sur les poste:
+    * diviser creation en: creation employe + ajout des postes
+    * diviser modification en: modification employe + ajout/modif/suppr des postes
 
 
-1- Actualiser la structure de la base de donnees en prenant en compte les photo et les encoded photo
-2- Mettre en place un widget qui permettrait d'afficher une image avant que picasso ne reussisse le chargement
