last mandeh tsara :)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,5 +54,6 @@
     <string name="modifier">Modifier</string>
     <string name="annuler_operation">Annuler l\'opération</string>
     <string name="recherche">menu_action_search</string>
+    <string name="font_crimson">Crimson-Roman.otf</string>
 
 </resources>
